<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="result">Result = %1$.3f</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="sum">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">÷</string>
</resources>