<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/firstNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:autofillHints="number"
        android:ems="7"
        android:hint="@string/first_number"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/secondNumberEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/secondNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:autofillHints="number"
        android:ems="7"
        android:hint="@string/second_number"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Space
        android:id="@+id/space"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sumButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:onClick="sum"
        android:text="@string/sum"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/subtractionButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:onClick="subtraction"
        android:text="@string/subtraction"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:onClick="multiplication"
        android:text="@string/multiplication"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/sumButton"
        app:layout_constraintStart_toStartOf="@+id/sumButton"
        app:layout_constraintTop_toBottomOf="@+id/sumButton" />

    <Button
        android:id="@+id/divisionButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:onClick="division"
        android:text="@string/division"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/subtractionButton"
        app:layout_constraintStart_toStartOf="@+id/subtractionButton"
        app:layout_constraintTop_toBottomOf="@+id/subtractionButton" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divisionButton" />

</androidx.constraintlayout.widget.ConstraintLayout>